# ZTransfer

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml
src/app/: cleanup_worker.py  config.py  db.py  main.py  models.py  paths.py  storage.py
src/app/auth/: __init__.py  dependencies.py  passwords.py  routes.py  schemas.py  service.py
src/app/files/: __init__.py  routes.py  service.py
src/app/templates/: base.html  index.html
src/app/templates/auth/: login.html
tests/: conftest.py  test_auth.py  test_files.py
